// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomTransactionLink with deposit matches the snapshot 1`] = `
<div
  class="css-wc19cd"
>
  <button
    class="css-1i3w7la"
    color="#9DB06A"
    type="text"
  >
    ?
  </button>
</div>
`;

exports[`CreateCustomTransactionLink with dispense matches the snapshot 1`] = `
<div
  class="css-wc19cd"
>
  <button
    class="css-1r5lu08"
    color="#E86C76"
    type="text"
  >
    ?
  </button>
</div>
`;
